# pep

./: .gitignore  README.md
00-common/docker/: Dockerfile  notes-sh.txt
01-guess-number-proto/: CMakeLists.txt  README.md  main.cpp
02-guess-number-game/: CMakeLists.txt  README.md  main.cpp  notes.md
02-guess-number-game/include/: version.h
02-guess-number-game/include/utils/: g_number_assets.h  terminal.h
02-guess-number-game/src/: engine.cpp  engine.h  game.cpp  game.h  to_string.h
02-guess-number-game/src/utils/: terminal.cpp
03-guess-number-engine/: CMakeLists.txt  main.cpp  notes.md
03-guess-number-engine/include/: action.h  assets_loader.h  engine.h  game_description.h  game_level_logic_processor.h  game_objects.h  game_variables.h  game_variables_service.h  level.h  pep.h  template_string_processing.h  text_world_object_processor.h  to_string.h  variables_storage.h
03-guess-number-engine/include/utils/: engine_assets.h  g_number_assets.h  g_number_logic.h  g_number_metainfo.h
03-guess-number-engine/src/: assets_loader.cpp  engine.cpp  game.cpp  game.h  game_level_logic_processor.cpp  game_variables_service.cpp  pep.cpp  text_world_object_processor.cpp  variables_storage.cpp
03-guess-number-engine/src/utils/: g_number_logic.cpp  terminal.cpp
04-guess-number-engine-refactor/: CMakeLists.txt
04-guess-number-engine-refactor/include/engine/: engine.h  pep.h
04-guess-number-engine-refactor/include/game_guess_num/: g_number_assets.h
04-guess-number-engine-refactor/src/engine/: engine.cpp
04-guess-number-engine-refactor/src/engine/service/: game_variables_service.cpp  (+1 more)
04-guess-number-engine-refactor/src/game_guess_num/: g_number_logic.cpp
04-guess-number-engine-refactor/src/game_guess_num_console_app/: main.cpp
05-engine-game-app-dev-environment/scripts/: run_build_d_vvv.sh  ut_idempinit_workspace.sh
05-engine-game-app-dev-environment/src/: CMakeLists.txt  readme.md
05-engine-game-app-dev-environment/src/app/: CMakeLists.txt  main.cpp
05-engine-game-app-dev-environment/src/engine/: CMakeLists.txt  libengine.cpp
05-engine-game-app-dev-environment/src/engine/include/engine/: libengine.h
05-engine-game-app-dev-environment/src/engine/load_func_ho_lib/: CMakeLists.txt
05-engine-game-app-dev-environment/src/engine/load_func_ho_lib/include/engine/: engine_func_load.h
05-engine-game-app-dev-environment/src/game/: CMakeLists.txt  libgame.cpp
05-engine-game-app-dev-environment/src/game/include/game/: libgame.h  symbol_export.h
05-engine-game-app-dev-environment/src/game/load_func_ho_lib/include/game/: game_func_load.h
05-glrender-service/: CMakeLists.txt  notes.md
05-glrender-service/include/engine/service/game_meta_info/: to_string.h  version.h
05-glrender-service/include/engine/service/level_processing/: game_level_logic_processor.h  level.h
05-glrender-service/include/engine/service/text_world/: text_world_object_processor.h
05-glrender-service/include/engine/service/variable_processing/: game_variables.h
05-glrender-service/include/game_guess_num/: g_number_logic.h  g_number_metainfo.h
05-glrender-service/include/game_guess_num_console_app/: assets_loader.h
05-glrender-service/src/engine/: pep.cpp
05-glrender-service/src/engine/service/: game_level_logic_processor.cpp  variables_storage.cpp
05-glrender-service/src/game_guess_num_console_app/: assets_loader.cpp
05-glrender-service/src/gl_demo_sdl_app/: main.cpp
06-input-mode/scripts/: ut_build_d_vvv_and_test.sh
06-input-mode/src/: CMakeLists.txt  readme.md
06-input-mode/src/app/: application.cpp  assets_loader.cpp  fpc.cpp  main.cpp
06-input-mode/src/app/include/: assets_loader.h
06-input-mode/src/engine/: CMakeLists.txt  libengine.cpp  pep.cpp
06-input-mode/src/engine/include/engine/: configuration.h  version.h
06-input-mode/src/engine/include/engine/service/glrenderer/: attribute.h  game_objects.h  gl_renderer.h  gl_renderer_service.h  gl_rendering_target.h  mesh.h
06-input-mode/src/engine/include/engine/service/input_processing/: keys.h
06-input-mode/src/engine/include/engine/service/level_processing/: game_level_logic_processor.h  level.h
06-input-mode/src/engine/include/engine/service/text_world/: game_objects.h
06-input-mode/src/engine/include/engine/utils/: color.h  color_map.h  gl_check.h  gl_enum.h  rgb888.h  sequence_generator.h
06-input-mode/src/engine/load_func_ho_lib/include/engine/: engine_func_load.h
06-input-mode/src/engine/pep_ho_lib/: CMakeLists.txt
06-input-mode/src/engine/pep_ho_lib/include/engine/: pep.h
06-input-mode/src/engine/service/: event_processing_service.cpp  game_level_logic_processor.cpp  text_world_object_processor.cpp  variables_storage.cpp
06-input-mode/src/engine/service/glrenderer/: attribute.cpp  gl_renderer.cpp  gl_renderer_service.cpp  gl_rendering_target.cpp  mesh.cpp
06-input-mode/src/engine/utils/: color_map.cpp  sequence_generator.cpp
06-input-mode/src/game/: CMakeLists.txt
06-input-mode/src/game/g_number/: logic.cpp
06-input-mode/src/game/include/: libgame.h
06-input-mode/src/game/include/visual_scenes/: assets.h  logic.h  metainfo.h
06-input-mode/src/game/load_func_ho_lib/include/game/: game_func_load.h
06-input-mode/src/game/visual_scenes/: libgame.cpp  logic.cpp
07-texture/scripts/: run_it_build_container.sh  test_execution.py
07-texture/src/: CMakeLists.txt  readme.md
07-texture/src/app/: application.cpp  assets_loader.cpp
07-texture/src/engine/: CMakeLists.txt  glad.c
07-texture/src/game/: libgame.cpp
08-sprite/scripts/: ut_idempinit_workspace.sh
08-sprite/src/: CMakeLists.txt  readme.md
08-sprite/src/app/: CMakeLists.txt  application.cpp  assets_loader.cpp
08-sprite/src/app/include/: application.h  assets_loader.h
08-sprite/src/engine/: CMakeLists.txt  libengine.cpp  pep.cpp
08-sprite/src/game/load_func_ho_lib/: CMakeLists.txt
08-sprite/src/game/load_func_ho_lib/include/game/: game_func_load.h
10-linux-proto-sdl/install/: 03-sdl-loop
10-linux-proto-sdl/scripts/: test_execution.py
10-linux-proto-sdl/src/: CMakeLists.txt  main.cxx
(+82 files in other folders)
